style: fix footer spacing

--- a/src/style.css
+++ b/src/style.css
@@ -125,7 +125,7 @@ body {
 }
 
 .hero-icon {
-    width: 1.5rem;
+    width: 2rem;
     height: auto;
 }
 
@@ -194,24 +194,27 @@ footer {
     display: flex;
     flex-wrap: wrap;
     background-color: var(--teal-three);
+    min-width: 100%;
 }
 
 .footer-text-content {
     display: flex;
     flex-direction: column;
-    align-items: center;
     padding: 1rem;
+    max-width: 500px;
 }
 
 .footer-header {
     color: white;
     font-size: 3rem;
+    align-self: center;
 }
 
 .footer-text {
     color: white;
     line-height: 1.3;
     margin-bottom: 1rem;
+    font-size: 1.2rem;
 }
 
 .footer-address {
@@ -254,11 +257,13 @@ footer {
 .footer-icons-container {
     display: flex;
     gap: 1rem;
+    align-self: center;
 }
 
 .footer-icon {
-    width: 1.5rem;
-    height: 1.5rem;
+    width: 2rem;
+    height: 2rem;
+    cursor: pointer;
 }
 
 .footer-image {
@@ -287,10 +292,29 @@ footer {
         width: 1rem;
         height: 1rem;
     }
-    .footer-image {
-        max-width: 300px;
-    }
     footer {
         padding: 2rem;
+        flex-wrap: nowrap;
+        gap: 3rem;
+    }
+    .footer-header {
+        font-size: 2rem;
+        align-self: flex-start;
+    }
+    .footer-text-content {
+        padding: 0;
+    }
+    .footer-text {
+        font-size: 1rem;
+    }
+    .footer-image {
+        max-width: 550px;
+    }
+    .footer-icons-container {
+        align-self: flex-start;
+    }
+    .footer-icon {
+        width: 1.5rem;
+        height: 1.5rem;
     }
 }
